# kaonic-android

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kaonic-plugin/: build.gradle
kaonic-plugin/jni/: Android.mk  CMakeLists.txt  kaonic-streamer.c
kaonic-plugin/kaonic/: Cargo.toml
kaonic-plugin/kaonic/examples/: mock_messenger.rs
kaonic-plugin/kaonic/src/: ack_manager.rs  android_jni.rs  cache.rs  event.rs  jni.rs  lib.rs  messenger.rs  model.rs  preset.rs
kaonic-plugin/src/androidTest/java/network/beechat/kaonic/: ExampleInstrumentedTest.kt
kaonic-plugin/src/main/: AndroidManifest.xml
kaonic-plugin/src/main/java/network/beechat/kaonic/: FileReceiver.java  FileWriteHelper.java  Kaonic.kt
kaonic-plugin/src/main/java/network/beechat/kaonic/audio/: AudioService.java  AudioService.kt  AudioStreamCallback.java  AudioStreamCallback.kt  CircularBuffer.java  CircularBuffer.kt
kaonic-plugin/src/main/java/network/beechat/kaonic/chat/: ChatCallback.java  ChatService.java
kaonic-plugin/src/main/java/network/beechat/kaonic/communication/: CallHandler.java  CborParser.java  ChatCallback.java  (+6 more)
kaonic-plugin/src/main/res/layout/: video_streaming_activity.xml
kaonic-plugin/src/test/java/network/beechat/kaonic/: ExampleUnitTest.kt
kaonic-sample/: build.gradle
kaonic-sample/src/main/: AndroidManifest.xml
kaonic-sample/src/main/res/values/: strings.xml  themes.xml
kaonic-sample/src/main/res/values-night/: themes.xml
kaonic-sample/src/main/res/xml/: file_paths.xml
(+83 files in other folders)
