[package]
name = "kaonic"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

reticulum = { path = "../../../reticulum-rs" }

# Logging
log = "0.4.26"
env_logger = "0.10"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

# Android Integration
jni = "0.21.1"
android_log = "0.1.3"

[lib]
# crate-type = ["staticlib", "dylib"]

[[example]]
name = "mock-messenger"
path = "examples/mock_messenger.rs"

