[package]
name = "kaonic"
version = "0.1.0"
edition = "2021"

[dependencies]

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

base64 = "0.22.1"

# reticulum-rs isn't public yet
reticulum = { path = "../../../reticulum-rs" }

# Logging
log = "0.4.26"
env_logger = "0.10"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

# Android Integration
jni = { version = "0.21.1", optional = true }
android_log = { version = "0.1.3", optional = true }

[features]
android = ["dep:jni", "dep:android_log"]

[lib]
crate-type = ["staticlib", "dylib"]

[[example]]
name = "mock-messenger"
path = "examples/mock_messenger.rs"

